tests/error/vector_too_big.gw
#! [contains] extraneous component of
 Vec4(0,0,0,0,0);
